--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,58 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
+
+*{
+    margin:0;
+    padding: 0;
+}
 h2{
-    color: tomato;
+    color: #fff;
+    /* background-color: rgb(134, 86, 127); */
+    font-weight: lighter;
+    font-style: italic;
+    /* font-family: sans-serif; */
+    font-family: "Dancing Script", cursive;
+    text-decoration: overline;
+    text-align: center;
+    font-size: 80px;
+}
+
+#heading-parent{
+
+    /* background-color: black; */
+    background-image: linear-gradient(315deg, rgb(24, 225, 40),transparent),url("../images/hero.gif");
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+    max-width: 1100px;
+    padding: 100px 0;
+    /* margin-left:auto ;
+    margin-right: auto; */
+    margin: 20px auto;
+    clip-path: polygon(100% 1%, 100% 73%, 50% 100%, 0 99%, 0 0);
+}
+
+.btn-parent{
+    text-align: center;
+    /* margin-top: 40px ; */
+    /* background-color: white; */
+                             
+}
+.btn{
+    background-color: rgb(122, 4, 112);
+    color: #fbfbfb;
+    padding: 7px 14px;
+    border-style: solid;
+    border-width: 2px ;
+    border-color: rgb(174, 3, 168);
+    border-radius: 4px;
+    margin-top: 40px;
+    font-family: "Dancing Script", cursive;
+    cursor: pointer;
+    transition: 5s;
+
+}
+
+.btn:hover{
+    background-color: blue;
 }
